# project_management

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  h
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: file-layout.md  mcp.md  memory.md  templates.md
examples/: phase1_scaffold.rs  phase2_scaffold.rs  phase3_5_bridge.rs  phase3_artifacts.rs
src/: cli.rs  cmd.rs  db.rs  editor.rs  fields.rs  lib.rs  main.rs  pm_shim.rs  project.rs  task.rs
src/agents/: mod.rs
src/launcher/: config.rs  mod.rs  registry.rs  spawn.rs
src/mcp/: handlers.rs  mod.rs  protocol.rs  server.rs  tools.rs
src/memory/: file.rs  mod.rs  scope.rs  store.rs
src/store/: aliases.rs  artifacts.rs  claude_md.rs  events.rs  front_matter.rs  git.rs  id.rs  layout.rs  locks.rs  migrate.rs  mod.rs  resolver.rs  sections.rs  state.rs  task_bridge.rs  templates.rs  watcher.rs
src/store/templates/: epic.md  milestone.md  product.md  project.md  subtask.md  task.md
src/style/: glyphs.rs  mod.rs
src/tui/: app.rs  colors.rs  enums.rs  input.rs  menu.rs  run.rs  task_form.rs  utils.rs  workflow.rs  workflow_run.rs
src/tui/activity/: mod.rs  ticker.rs
src/tui/app/: confirm.rs  dialog.rs  filter.rs  help.rs  mod.rs  navigation.rs  prompt.rs  ticket_detail.rs
src/tui/input/: mod.rs
src/tui/lhp/: mod.rs
src/tui/nav/: mod.rs
src/tui/shell/: footer.rs  header.rs  help.rs  mod.rs
src/tui/ticket_editor/: form.rs  mod.rs  sections.rs
src/tui/workbench/: agents.rs  board.rs  memories.rs  mod.rs  placeholder.rs  templates.rs  terminals.rs
src/v2/: cli.rs  cmd.rs  mod.rs  root.rs
src/views/: events_view.rs  mod.rs
tests/: phase10_memory.rs  phase11_mcp.rs  phase4_acceptance.rs  phase5_git.rs  phase6_locks.rs  phase8_documents.rs  phase9_activity.rs  phase_v0_3_4_live_refresh.rs  phase_v0_3_5_launcher.rs  phase_v0_3_6_surfaces.rs  phase_v0_3_7_agents.rs
