[package]
name = "project_management"
version = "1.0.0"
edition = "2021"
description = "Local-first project management CLI with a hierarchical TUI, agent-ready CLAUDE.md context, artifact tracking, three-tier memory, and an MCP server."
license = "MPL-2.0"
authors = ["Peter Garfield Bower"]
readme = "README.md"
repository = "https://github.com/pbower/project_management"
homepage = "https://github.com/pbower/project_management"
documentation = "https://docs.rs/project_management"
keywords = ["cli", "tui", "project-management", "mcp", "ticketing"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.29"
serde_yml = "0.0.12"
notify-debouncer-mini = "0.7.0"

[[bin]]
name = "pm"
path = "src/main.rs"
