[package]
name = "spacecell-thunder"
version = "0.2.0"
edition = "2021"
description = "SpaceCell Thunder: hierarchical project management cockpit with embedded agent terminals, three-tier memory, and MCP-native coordination."
license = "MPL-2.0"
authors = ["Peter Garfield Bower"]
readme = "README.md"
repository = "https://github.com/pbower/project_management"
homepage = "https://github.com/pbower/project_management"
documentation = "https://docs.rs/spacecell-thunder"
keywords = ["cli", "tui", "project-management", "mcp", "ai-agents"]
categories = ["command-line-utilities", "development-tools"]

[lib]
# Library crate identifier stays `project_management` for v0.2.0 to avoid a
# 33-file `use` rewrite. v0.3.0 may rename to `spacecell_thunder` as part of
# the demolition phase.
name = "project_management"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.29"
serde_yml = "0.0.12"
notify-debouncer-mini = "0.7.0"

# Primary binary: the new SpaceCell Thunder entry point. Same compiled
# code as the legacy `pm` binary below; the shim just prints a deprecation
# notice and exec's this one.
[[bin]]
name = "spacecell"
path = "src/main.rs"

# Deprecation shim for users on the v0.9.x `pm` binary. Removed in v0.3.0
# once the new cockpit ships.
[[bin]]
name = "pm"
path = "src/pm_shim.rs"
