[package]
name = "spacecell-thunder"
version = "0.3.7"
edition = "2021"
description = "SpaceCell Thunder: hierarchical project management cockpit with embedded agent terminals, three-tier memory, and MCP-native coordination."
license = "MPL-2.0"
authors = ["Peter Garfield Bower"]
readme = "README.md"
repository = "https://github.com/pbower/project_management"
homepage = "https://github.com/pbower/project_management"
documentation = "https://docs.rs/spacecell-thunder"
keywords = ["cli", "tui", "project-management", "mcp", "ai-agents"]
categories = ["command-line-utilities", "development-tools"]

[lib]
# Library crate identifier stays `project_management` for v0.2.0 to avoid a
# 33-file `use` rewrite. v0.3.0 may rename to `spacecell_thunder` as part of
# the demolition phase.
name = "project_management"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.29"
serde_yml = "0.0.12"
notify-debouncer-mini = "0.7.0"
toml = "1.1.2"
libc = "0.2.186"
portable-pty = "0.9.0"
shpool_vt100 = "0.1.3"

# v0.3.0 dropped the `pm` deprecation shim that v0.2.0 carried. Users on
# the v0.9.x `pm` name install `spacecell` directly.
[[bin]]
name = "spacecell"
path = "src/main.rs"
